# reference-ds-samples

./: LICENSE  reference-ds-samples.code-workspace
pipelines/agentic-ts-forecaster/: CLAUDE.md  config.py  pyproject.toml
pipelines/agentic-ts-forecaster/agents/: __init__.py  data_ingestion.py  eda.py
pipelines/agentic-ts-forecaster/config/: claude_online.yaml  local_offline.yaml  rule_based.yaml
pipelines/agentic-ts-forecaster/models/: __init__.py  base.py  registry.py
pipelines/agentic-ts-forecaster/orchestrator/: base.py  factory.py  rule_based_orchestrator.py
